# feed-refurb

./: .travis.yml  Cargo.toml  Procfile  README.md  Rocket.toml  build.rs
feed-refurb/: Cargo.toml
feed-refurb-web/: Cargo.toml  build.rs
feed-refurb-web/src/: main.rs
feed-refurb-web/templates/error/: 404.html.hbs
feed-refurb/src/: lib.rs
feed-refurb/tests/: lib.rs
feed-refurb/tests/fixtures/refurb_returns_rss_error/: invalid-feed.xml
src/: lib.rs  main.rs
templates/: index.html.hbs
test/fixtures/refurb_returns_valid_feed/: expected-feed.interpolated.xml  latest-cool-article-123.html  source-feed.interpolated.xml
tests/: application.rs
