[package]
name = "feed-refurb"
version = "0.1.0"
authors = ["Jessica Stokes <hello@jessicastokes.net>"]
build = "build.rs"

[dependencies]
failure = "0.1.2"
failure_derive = "0.1.2"
html5ever = "0.22.3"
kuchiki = "0.7.0"
log = "0.4.5"
rayon = "1.0.2"
reqwest = "0.8.7"
rocket = "0.3.14"
rocket_codegen = "0.3.14"
rss = "1.5.0"

[dependencies.rocket_contrib]
version = "0.3.14"
default-features = false
features = ["handlebars_templates"]

[dev-dependencies]
mockito = "0.12.0"
pretty_assertions = "0.5.1"
