[package]
name = "feed-refurb-web"
version = "0.1.0"
authors = ["Jessica Stokes <hello@jessicastokes.net>"]
build = "build.rs"

[dependencies]
kuchiki = "0.7.0"
reqwest = "0.8.7"
rocket = "0.3.14"
rocket_codegen = "0.3.14"

[dependencies.feed-refurb]
path = "../feed-refurb"

[dependencies.rocket_contrib]
version = "0.3.14"
default-features = false
features = ["handlebars_templates"]

[dev-dependencies]
mockito = "0.12.0"
pretty_assertions = "0.5.1"
