[package]
name = "feed-refurb"
version = "0.1.0"
authors = ["Jessica Stokes <hello@jessicastokes.net>"]

[dependencies]
failure = "0.1.2"
failure_derive = "0.1.2"
html5ever = "0.22.3"
kuchiki = "0.7.0"
log = "0.4.5"
rayon = "1.0.2"
reqwest = "0.8.7"
rss = "1.5.0"

[dev-dependencies]
mockito = "0.12.0"
pretty_assertions = "0.5.1"
